@@ -5,6 +5,9 @@ Change history for Coverage.py
 Version 3.5.2b1
 ---------------
 
+- Custom CSS can be applied to the HTML report by specifying a CSS file as
+  the extra_css configuration value in the [html] section.
+
 - Source files with custom encodings declared in a comment at the top are now
   properly handled during reporting on Python 2.  Python 3 always handled them
   properly.  This fixes `issue 157`_.
